CHATS_SIT/force-app/main/default/objects/T_APPLN_PARENT_SCH__c.object
<CustomObject>
    <description>PEAK application parent schedule information</description>
    <fields>
        <fullName>CDE_ACTV__c</fullName>
        <description>CDE_ACTV</description>
        <label>CDE_ACTV</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_DAY__c</fullName>
        <description>CDE_DAY</description>
        <label>CDE_DAY</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_APPLN_INDIV</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Parent Schedule Information</relationshipLabel>
        <relationshipName>Application_Parent_Schedule_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_APPLN_PARENT_SCH__c</fullName>
        <label>IDN_APPLN_PARENT_SCH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBR_HRS_DECLARE__c</fullName>
        <description>NBR_HRS_DECLARE</description>
        <label>NBR_HRS_DECLARE</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Application Parent Schedule Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APSI-{0}</displayFormat>
        <label>Application Parent Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Parent Schedule Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>